fixed he layout bug of the form used to add products

--- a/src/components/navigation/navbar/Navbar.css
+++ b/src/components/navigation/navbar/Navbar.css
@@ -12,6 +12,8 @@
     position: fixed;
     top: 5rem;
 
+    z-index: 10;
+
     transition: all .3s ease-in-out;
 }
 
