--- a/src/components/navigation/navtop/Navtop.css
+++ b/src/components/navigation/navtop/Navtop.css
@@ -7,7 +7,7 @@
     color: var(--color-white);
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 10;
 }
 
 .navtop__logo {
